<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:id="@+id/root_layout">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="#274E40"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="70dp"/>

    <TextView
        android:id="@+id/throw_count"
        android:text="@string/throw_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="35dp"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TableRow
            android:gravity="center">

            <ImageButton
                android:id="@+id/dice_button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/blue1"
                android:padding="10dp"
                android:background="@android:color/transparent"
                android:minHeight="100dp"
                android:minWidth="100dp"
                android:scaleType="fitCenter"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/dice1"
                />

            <ImageButton
                android:id="@+id/dice_button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/blue1"
                android:padding="10dp"
                android:background="@android:color/transparent"
                android:minHeight="100dp"
                android:minWidth="100dp"
                android:scaleType="fitCenter"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/dice2"
                />

            <ImageButton
                android:id="@+id/dice_button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/blue1"
                android:padding="10dp"
                android:background="@android:color/transparent"
                android:minHeight="100dp"
                android:minWidth="100dp"
                android:scaleType="fitCenter"
                android:contentDescription="@string/dice3"
                />
        </TableRow>

        <TableRow
            android:gravity="center">

            <ImageButton
                android:id="@+id/dice_button_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/blue1"
                android:padding="10dp"
                android:background="@android:color/transparent"
                android:minHeight="100dp"
                android:minWidth="100dp"
                android:scaleType="fitCenter"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/dice4"
                />

            <ImageButton
                android:id="@+id/dice_button_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/blue1"
                android:padding="10dp"
                android:background="@android:color/transparent"
                android:minHeight="100dp"
                android:minWidth="100dp"
                android:scaleType="fitCenter"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/dice5"
                />

            <ImageButton
                android:id="@+id/dice_button_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/blue1"
                android:padding="10dp"
                android:background="@android:color/transparent"
                android:minHeight="100dp"
                android:minWidth="100dp"
                android:scaleType="fitCenter"
                android:contentDescription="@string/dice6"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="50dp">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:padding="13dp"
                android:background="@drawable/spinner_shape"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/throw_button"
                android:layout_gravity="center"
                android:background="@drawable/button_shape"
                android:gravity="center"
                android:text="@string/throw_button"
                android:textColor="@color/white" />

        </TableRow>
    </TableLayout>
</LinearLayout>