<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".IntroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/root_layout"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="50sp"
            android:gravity="center"
            android:textColor="#E78851"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="120dp"
            android:text="@string/description"
            android:textColor="#274E40"
            android:textSize="17sp"/>


        <Button
            android:id="@+id/start_button"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:layout_width="120dp"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:text="@string/start_game"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>